--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,19 +44,19 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
 
-      - name: Get test packages excluding tests folder
-        run: |
-          TEST_PACKAGES=$(go list ./... | grep -v '/tests/' || echo "")
-          echo "TEST_PACKAGES=$TEST_PACKAGES" >> $GITHUB_ENV
+      - name: Set Go Proxy
+        run: go env -w GOPROXY=https://proxy.golang.org,direct
 
       - name: Install mockgen
         run: go install go.uber.org/mock/mockgen@latest
 
-      - name: Update mocks
-        run: make generate
+      - name: Get test packages excluding tests folder
         working-directory: backend
+        run: |
+          TEST_PACKAGES=$(go list ./... | grep -v '/tests/' || echo "")
+          echo "TEST_PACKAGES=$TEST_PACKAGES" >> $GITHUB_ENV
 
       - name: Run Unit Tests
         if: ${{ env.TEST_PACKAGES != '' }}
-        run: go test ${{ env.TEST_PACKAGES }} -v -cover -coverprofile=coverage.out
         working-directory: backend
+        run: go test ${{ env.TEST_PACKAGES }} -v -cover -coverprofile=coverage.out
